...
    bookedBy,
    studioName,
    ...baseProps
}: BookingConfirmationProps) => {
    return (
        <BaseLayout
            previewText={`Booking Confirmed: ${title}`}
            tenantName={studioName}
            {...baseProps}
        >
            <Heading className="text-black text-[24px] font-normal text-center p-0 my-[30px] mx-0">
                Booking Confirmed!
            </Heading>
...
